kubernetes/base/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-delivery
  labels:
    app: ms-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-delivery
  template:
    metadata:
      labels:
        app: ms-delivery
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: ms-delivery-config
            - secretRef:
                name: ms-delivery-secret
          image: yasinkara/ms-delivery:latest
          imagePullPolicy: Always
          name: ms-delivery
          command: ['/bin/sh']
          args: ['-c', 'node ace migration:run --force;node ace db:seed;dumb-init node server.js']
          ports:
            - containerPort: 3333
          resources: {}
      restartPolicy: Always
