kubernetes/base/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-delivery
  labels:
    app: ms-delivery
spec:
  type: ClusterIP
  ports:
    - name: 'web'
      port: 80
      targetPort: 3333
  selector:
    app: ms-delivery
